--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,29 +1,34 @@
-.promo
-	padding: 100px 0
+.test
+	background: url(../images/bg.jpeg) center (center/cover) no-repeat
+	min-height: 700px
+	padding: 110px 0 20px 0
 .slider
 	position: relative
-	width: 1050px
-	height: 680px	
+	width: 900px
 	margin: 0 auto
+	min-height: 300px
 	overflow: hidden
+	
 	&_line
-		display: flex
 		position: relative
+		display: flex
 		left: 0
 		transition: all ease 1s
-		
-		
 .prev
-	position: absolute
-	top: 40%
+	position: absolute	
+	font-size: 70px
+	top: 50%
 	transform: translateY(-50%)
 	left: 200px
 	cursor: pointer
+	color: #ffffff
+	z-index: 2
 .next
 	position: absolute	
-	top: 40%
+	font-size: 70px
+	top: 50%
 	transform: translateY(-50%)
 	right: 200px
-	cursor: pointer
-
-
+	cursor: pointer	
+	color: #ffffff
+	z-index: 2
