--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,34 +1,57 @@
-.test
-	background: url(../images/bg.jpeg) center (center/cover) no-repeat
-	min-height: 700px
-	padding: 110px 0 20px 0
-.slider
-	position: relative
-	width: 900px
-	margin: 0 auto
-	min-height: 300px
-	overflow: hidden
-	
-	&_line
-		position: relative
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans&display=swap")
+
+*
+	margin: 0
+	padding: 0
+
+body
+	font: 17px/1.5 "PT Sans", sans-serif
+	background: #ecf0f1
+	color: #333
+
+.container
+	max-width: 500px
+	min-height: 16em
+	margin: 1em auto 0
+
+	&--tabs
+		list-style: none
 		display: flex
-		left: 0
-		transition: all ease 1s
-.prev
-	position: absolute	
-	font-size: 70px
-	top: 50%
-	transform: translateY(-50%)
-	left: 200px
+		flex-direction: row
+		justify-content: flex-start
+		align-items: stretch
+
+.tab
 	cursor: pointer
-	color: #ffffff
-	z-index: 2
-.next
-	position: absolute	
-	font-size: 70px
-	top: 50%
-	transform: translateY(-50%)
-	right: 200px
-	cursor: pointer	
-	color: #ffffff
-	z-index: 2
+	position: relative
+	display: block
+	margin: 0 -1px 0 0
+	padding: 7px 20px 8px
+	border: solid #ecf0f1
+	border-width: 1px 1px 0
+	background: #f5f7fa
+	font-size: 19px
+
+	&:hover
+		background-color: #ecf0f1
+
+.tab--active
+	background-color: #fff
+	color: black
+	pointer-events: none
+
+.content
+	display: none
+	padding: 3em
+	background-color: #fff
+
+.content--active
+	display: block
+
+h2
+	margin-bottom: 20px
+	font-weight: 700
+
+p
+	font-weight: 300
+	margin: 20px 0
