--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,57 +1,31 @@
-@import url("https://fonts.googleapis.com/css2?family=PT+Sans&display=swap")
+.promo
+	padding: 100px 0
 
-*
-	margin: 0
-	padding: 0
-
-body
-	font: 17px/1.5 "PT Sans", sans-serif
-	background: #ecf0f1
-	color: #333
-
-.container
-	max-width: 500px
-	min-height: 16em
-	margin: 1em auto 0
-
-	&--tabs
-		list-style: none
-		display: flex
-		flex-direction: row
-		justify-content: flex-start
-		align-items: stretch
-
-.tab
-	cursor: pointer
+.slider
 	position: relative
-	display: block
-	margin: 0 -1px 0 0
-	padding: 7px 20px 8px
-	border: solid #ecf0f1
-	border-width: 1px 1px 0
-	background: #f5f7fa
-	font-size: 19px
+	width: 900px
+	margin: 0 auto
+	min-height: 300px
+	overflow: hidden
 
-	&:hover
-		background-color: #ecf0f1
+.slider_line
+	display: flex
+	position: relative
+	left: 0
+	transition: all ease 1s
 
-.tab--active
-	background-color: #fff
-	color: black
-	pointer-events: none
+.prev
+	position: absolute
+	top: 50%
+	transform: translateY(-50%)
+	left: 300px
+	cursor: pointer
+	font-size: 50px
 
-.content
-	display: none
-	padding: 3em
-	background-color: #fff
-
-.content--active
-	display: block
-
-h2
-	margin-bottom: 20px
-	font-weight: 700
-
-p
-	font-weight: 300
-	margin: 20px 0
+.next
+	position: absolute
+	top: 50%
+	transform: translateY(-50%)
+	right: 300px
+	cursor: pointer
+	font-size: 50px
